catkin_ws/logs/px4_offboard/build.make.038.log
[  0%] Built target _catkin_empty_exported_target
[  0%] Built target actionlib_generate_messages_cpp
[  0%] Built target actionlib_msgs_generate_messages_cpp
[  0%] Built target diagnostic_msgs_generate_messages_cpp
[  0%] Built target std_msgs_generate_messages_cpp
[  0%] Built target geometry_msgs_generate_messages_cpp
[  0%] Built target geometry_msgs_generate_messages_lisp
[  0%] Built target diagnostic_msgs_generate_messages_py
[  0%] Built target diagnostic_msgs_generate_messages_lisp
[  0%] Built target nav_msgs_generate_messages_cpp
[  0%] Built target actionlib_generate_messages_py
[  0%] Built target mavros_msgs_generate_messages_py
[  0%] Built target std_msgs_generate_messages_py
[  0%] Built target actionlib_msgs_generate_messages_lisp
[  0%] Built target actionlib_generate_messages_lisp
[  0%] Built target actionlib_msgs_generate_messages_py
[  0%] Built target _px4_offboard_generate_messages_check_deps_JoyCommand
[  0%] Built target roscpp_generate_messages_cpp
[  0%] Built target sensor_msgs_generate_messages_py
[  0%] Built target roscpp_generate_messages_py
[  0%] Built target nav_msgs_generate_messages_lisp
[  0%] Built target sensor_msgs_generate_messages_lisp
[  0%] Built target nav_msgs_generate_messages_py
[  0%] Built target mavros_msgs_generate_messages_cpp
[  0%] Built target sensor_msgs_generate_messages_cpp
[  0%] Built target rosgraph_msgs_generate_messages_lisp
[  0%] Built target rosgraph_msgs_generate_messages_py
[  0%] Built target std_msgs_generate_messages_lisp
[  0%] Built target geometry_msgs_generate_messages_py
[  0%] Built target rosgraph_msgs_generate_messages_cpp
[  0%] Built target roscpp_generate_messages_lisp
[  0%] Built target tf2_msgs_generate_messages_lisp
[  0%] Built target tf2_msgs_generate_messages_cpp
[  0%] Built target tf2_msgs_generate_messages_py
[  8%] Built target mavros_msgs_generate_messages_lisp
[ 16%] Built target px4_offboard_generate_messages_py
[ 25%] Built target px4_offboard_generate_messages_lisp
[ 33%] Built target px4_offboard_generate_messages_cpp
[ 50%] Built target teleop
[35m[1mScanning dependencies of target apriltag[0m
[ 50%] Built target px4_offboard_generate_messages
[ 66%] Built target checker
[ 83%] Built target SLAM
[ 91%] [32mBuilding CXX object CMakeFiles/apriltag.dir/src/apriltag.cpp.o[0m
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/px4_offboard/src/apriltag.cpp: In function ‘int main(int, char**)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/px4_offboard/src/apriltag.cpp:58:9: error: ‘g’ was not declared in this scope
         g.command = 3.14;
         ^
make[2]: *** [CMakeFiles/apriltag.dir/src/apriltag.cpp.o] Error 1
make[1]: *** [CMakeFiles/apriltag.dir/all] Error 2
make: *** [all] Error 2
